--- a/portfolio.html
+++ b/portfolio.html
@@ -27,11 +27,11 @@
     </div>
 
 
-    <div class="sobre">
+    <div class="sobre" id="Sobre">
         <div class="foto">
             <a href="imagens/foto perfil profissional.png" class="item-foto"><img src="imagens/foto perfil profissional.png" alt="foto de perfil"></a>
             <h2>"Programador Full-Stack e Designer Gráfico: Eu transformo visões em experiências digitais completas,
-                 unindo o rigor técnico do desenvolvimento web com a criatividade estratégica do design."</h2>
+            unindo o rigor técnico do desenvolvimento web com a criatividade estratégica do design."</h2>
 
              </div>
     </div>
@@ -40,7 +40,9 @@
 
 
     <main>
-        <div class="container-galeria">
+        <div class="container-galeria" id="Projetos">
+
+            <h1 class="animate__animated animate__bounce animate__bounceInUp">Flayer Digital:</h1>
             
             <a href="imagens/hambueguer do batata.png" class="item-galeria"><img src="imagens/hambueguer do batata.png" alt="batata burguer"></a>
             <a href="imagens/promocao.png" class="item-galeria"><img src="imagens/promocao.png" alt="hamburguer e fritas com refri lata"></a>
@@ -49,13 +51,17 @@
         </div>
     </main>
 
-    <section class="folder-supermercado" id="folheto"> 
+    <section class="folder-supermercado" id="folheto">
+        
+        <h1 class="animate__animated animate__bounce animate__bounceInUp">Folheto para Supermercado</h1>
 
         <img src="imagens/Abelinha.png" class="item-galeria" alt="atacadao do abelinha">
 
     </section>
 
     <section class="logo" id="logotipo">
+
+        <h1 class="animate__animated animate__bounce animate__bounceInUp">Logotipo/Logomarca:</h1>
 
         <img src="imagens/dreamina-2025-10-15-8799-Tranforme essa imagem eu uma logo marca,....jpeg" class="item-galeria" alt="logo Designer">
         <img src="imagens/logomarca.png" class="item-galeria" alt="logomarca">
