finalizando o footer do portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
         <div class="interface">
             <div class="texto-sobre">
                 <h1 class="titulo1">Sobre <span>mim</span></h1>
-                 <p>Crio flyer para redes sociais e artes impactantes para supermercados e atacados" </p>
+                 <p>Crio flyer para redes sociais e artes impactantes para supermercados e atacados. </p>
 
             </div>
             <div class="minha-foto">
@@ -57,10 +57,10 @@
         <div class="interface">
             <div class="txt-contato">
                 <h1 class="animate__animated animate__bounce animate__bounceInUp">Entre em contato comigo por aqui.</h1>
-                 <a href="mailto:andersonfdl@gmail.com"><i class="bi bi-envelope-at"></i> andersonfdl@gmail.com</a>
                 <p><i class="bi bi-whatsapp"></i> (51) 98050-9482</p>
-                <a href="https://www.linkedin.com/in/anderson-souza-169461264/"><i class="bi bi-linkedin"></i> Anderson Souza</a>
-                <a href="https://github.com/andersonsouzacardoso"><i class="bi bi-github"></i> Anderson Souza</a>    
+                 <a href="mailto:andersonfdl@gmail.com"><i class="bi bi-envelope-at"></i></a>
+                <a href="https://www.linkedin.com/in/anderson-souza-169461264/"><i class="bi bi-linkedin"></i></a>
+                <a href="https://github.com/andersonsouzacardoso"><i class="bi bi-github"></i></a>    
             </div> 
            
             <form action="#">
@@ -85,6 +85,20 @@
              
          </div>
     </section>
+
+    <footer>
+        <div class="interface">
+            <div class="logo-rodape">
+                <p>&reg;Anderson Souza&copy;&trade;</p>
+            </div>
+            <div class="txt-contato">
+                <a href="https://www.instagram.com/andersonsouza84a/"><i class="bi bi-instagram"></i></a>
+                 <a href="mailto:andersonfdl@gmail.com"><i class="bi bi-envelope-at"></i></a>
+                <a href="https://www.linkedin.com/in/anderson-souza-169461264/"><i class="bi bi-linkedin"></i></a>
+                <a href="https://github.com/andersonsouzacardoso"><i class="bi bi-github"></i></a>    
+            </div> 
+        </div>
+    </footer>
 </body>
 <script src="magica.js"></script>
 </html>
